# kalshi-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: kalshi-bot.yml
src/: cex.rs  client.rs  config.rs  logger.rs  main.rs  models.rs  slack.rs  strategy.rs
