[package]
name = "kalshi-15m-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
